--- a/0-/GSoC:2011/Mentor Application.mediawiki
+++ b/0-/GSoC:2011/Mentor Application.mediawiki
@@ -51,7 +51,7 @@
 : All mentors are well familiar with the whole code base in addition to their specific areas of expertise. We communicate together on a daily basis, so a handover to any of the mentors is always trivial. Thankfully we haven't to my knowledge had any completely disappearing mentors. Last year we had a disappearing GSoC Admin, but this person was not a mentor and the role as an Admin was handed over without cause for panic. The community on the IRC channel can sometimes also help answer questions students might have even when no official members are available.
 
 ; What steps will you take to encourage students to interact with your project's community before, during and after the program?
-: Hanging around on IRC will be a requirement, we will see non-IRCing as desertion. We will show our patented kindness and interest in the students work and persona. We will encurage students during the selection process to start digging into the code so that they can provide a good proposal. This almost always involves discussing their ideas with developers on either IRC or on the mailing list.We do not think it's possible to convince students to stick with the project unless they are interested in it in the first place. For this reason, we want to favor the participation of students who show a genuine interest in XMMS2, not just in a single GSoC task: (1) students who are already regular contributors and members of the community and who have a contribution to make in the context of GSoC, and (2) students who convince us of their unlimited passion for XMMS2 in their application form (among other things, we ask "why are you interested in XMMS2, what do you think you could bring to it, and what are the things you can think of to make XMMS2 an even better project?"). Obviously, a friendly community and lots of communication also help keeping good students during and after GSoC. 
+: Hanging around on IRC will be a requirement, we will see non-IRCing as desertion. We will show our patented kindness and interest in the students work and persona. We will encourage students during the selection process to start digging into the code so that they can provide a good proposal. This almost always involves discussing their ideas with developers on either IRC or on the mailing list. We do not think it's possible to convince students to stick with the project unless they are interested in it in the first place. For this reason, we want to favor the participation of students who show a genuine interest in XMMS2, not just in a single GSoC task: (1) students who are already regular contributors and members of the community and who have a contribution to make in the context of GSoC, and (2) students who convince us of their unlimited passion for XMMS2 in their application form (among other things, we ask "why are you interested in XMMS2, what do you think you could bring to it, and what are the things you can think of to make XMMS2 an even better project?"). Obviously, a friendly community and lots of communication also help keeping good students during and after GSoC. 
 
 ; If you are a small or new organization applying to GSoC, please list a larger, established GSoC organization or a Googler that can vouch for you here.
 : This will, with your permission, be our 6th year of Google Summer of Code, we hope you trust us :)
