--- a/0-/GSoC:2011/Mentor Application.mediawiki
+++ b/0-/GSoC:2011/Mentor Application.mediawiki
@@ -11,13 +11,13 @@
 : LGPL
 
 ; Why is your organization applying to participate in GSoC 2011? What do you hope to gain by participating? (should be long)
-: A lot of code, and most importantly, interesting concepts, that XMMS2 is built upon come directly from Summer of Code students. Over the years we've gained a lot of new friends and fellow hackers that have kept the project going year after year. We're very passionated about doing the right thing even if it involves going that extra mile, we do this by sharing our experience in software engineering with each other and promoting the art of expressing oneself in beautiful code. Over the years many of our developers, quite a few who started out as GSoC students, have started their working careers with their involvement in XMMS2 as one of their main references. We hope to both teach, and learn, from the students we collaborate with during this year's Google Summer of Code, but most of all, we want to be a part of the Summer of Code because it's fun!
+: A lot of code, and most importantly, interesting concepts, that XMMS2 is built upon come directly from Summer of Code students. Over the years we've gained a lot of new friends and fellow hackers that have kept the project going year after year. We're very passionate about doing the right thing even if it involves going that extra mile, we do this by sharing our experience in software engineering with each other and promoting the art of expressing oneself in beautiful code. Over the years many of our developers, quite a few who started out as GSoC students, have started their working careers with their involvement in XMMS2 as one of their main references. We hope to both teach, and learn, from the students we collaborate with during this year's Google Summer of Code, but most of all, we want to be a part of the Summer of Code because it's fun!
 
 ; If accepted, would this be your first year participating in GSoC?
 : 6:th year!
 
 ; Did your organization participate in past GSoCs? If so, please summarize your involvement and the successes and challenges of your participation.
-:Over the years GSoC has for example brought us support for the DAAP protocol, the powerful querying concept called Collections, support for sending audio to an Apple Airport Express (before any other open source project), a testing framework which has really grown over the years, generated code for our protocol, a new database backend which is insanely fast, an improvement to the Collections concept, a new CLI, and a couple of interesting client experiments. Quite the list of interesting technologies. One challenge is always to pick a student that will not drop out, we've had a lot of success with that compared to other projects but we can always improve in that area, it's a waste of everyones time and steals a position another student could have taken. Another challenge has been to get GSoC projects merged in a reasonable timeframe which might involve refining the APIs before we let them out into the wild, or getting the code properly tested, but most projects have been merged to this date. Working more closely with the student, and making sure the student is aligned with the projects ideas and values is an important part in reducing this problem. When it comes to clients as a summer of code project we've definitely failed to pick students that we believe will carry on the task after the project has ended, and the only truly successful client is the new CLI, although some good UI concepts have been created which have or will be used in future projects done outside GSoC.
+:Over the years GSoC has for example brought us support for the DAAP protocol, the powerful querying concept called Collections, support for sending audio to an Apple Airport Express (before any other open source project), a testing framework which has really grown over the years, generated code for our protocol, a new database back-end which is insanely fast, an improvement to the Collections concept, a new CLI, and a couple of interesting client experiments. Quite the list of interesting technologies. One challenge is always to pick a student that will not drop out, we've had a lot of success with that compared to other projects but we can always improve in that area, it's a waste of everyone's time and steals a position another student could have taken. Another challenge has been to get GSoC projects merged in a reasonable time frame which might involve refining the APIs before we let them out into the wild, or getting the code properly tested, but most projects have been merged to this date. Working more closely with the student, and making sure the student is aligned with the projects ideas and values is an important part in reducing this problem. When it comes to clients as a summer of code project we've definitely failed to pick students that we believe will carry on the task after the project has ended, and the only truly successful client is the new CLI, although some good UI concepts have been created which have or will be used in future projects done outside GSoC.
 
 ; <nowiki>If your organization participated in past GSoCs, please let us know the ratio of students passing to students allocated, e.g. 2006: 3/6 for 3 out of 6 students passed in 2006.</nowiki>
 : Our ratios of passed students are the following:
