--- a/0-/GSoC:2011/Mentor Application.mediawiki
+++ b/0-/GSoC:2011/Mentor Application.mediawiki
@@ -2,7 +2,7 @@
 : XMMS2
 
 ; Description:
-: XMMS2 is the spiritual successor to the very successful XMMS project. The creators of XMMS got together in 2002 and spun out the XMMS2 sister project. From the beginning the idea was to correct some of the early mistakes in XMMS design. The project grew and is now conceptually very different from XMMS. The team behind XMMS2 focuses on audio quality, freedom of choice and powerful organization features. Community-wise the team is around 10-20 regular contributors and over 95 people have at some time contributed to XMMS2. 
+: XMMS2 is the spiritual successor to the very successful XMMS project. The creators of XMMS got together in 2002 and spun out the XMMS2 sister project. From the beginning the idea was to correct some of the early mistakes in XMMS' design. The project grew and is now conceptually very different from XMMS. The team behind XMMS2 focuses on audio quality, freedom of choice and powerful organization features. Community-wise the team is around 10-20 regular contributors and over 95 people have at some time contributed to XMMS2. 
 
 ; Home page:
 : http://xmms2.org/wiki/Main_Page
@@ -11,7 +11,7 @@
 : LGPL
 
 ; Why is your organization applying to participate in GSoC 2011? What do you hope to gain by participating? (should be long)
-: A lot of code, and most importantly, interesting concepts, that XMMS2 is built upon come directly from Summer of Code students. Over the years we've gained a lot of new friends and fellow hackers that have kept the project going year after year. We're very passionate about doing the right thing even if it involves going that extra mile, we do this by sharing our experience in software engineering with each other and promoting the art of expressing oneself in beautiful code. Over the years many of our developers, quite a few who started out as GSoC students, have started their working careers with their involvement in XMMS2 as one of their main references. We hope to both teach, and learn, from the students we collaborate with during this year's Google Summer of Code, but most of all, we want to be a part of the Summer of Code because it's fun!
+: A lot of code, and most importantly, interesting concepts are what we hope to gain. Many of the ideas that XMMS2 is built upon come directly from Summer of Code students. Over the years we've gained a lot of new friends and fellow hackers that have kept the project going year after year. We're very passionate about doing the right thing, even if it involves going that extra mile. We do this by sharing our experience in software engineering with each other and promoting the art of expressing oneself in beautiful code. Over the years many of our developers, quite a few who started out as GSoC students, have begun their working careers with their involvement in XMMS2 as one of their main references. We hope to both teach, and learn from, the students we collaborate with during this year's Google Summer of Code, but most of all, we want to be a part of the Summer of Code because it's fun!
 
 ; If accepted, would this be your first year participating in GSoC?
 : 6:th year!
