Levitation import of page 2616 rev 9284.

--- a/0-/NextGenOutput.mediawiki
+++ b/0-/NextGenOutput.mediawiki
@@ -105,3 +105,8 @@ Crosslapped switch Seek/Jump ("Crosslapped Switched Double Buffer")
 The same as above but crosslapped.
 
 </pre>
+
+
+[[File:P1060401.JPG]]
+
+[[File:P1060402.JPG]]
