Levitation import of page 2553 rev 9289.

--- a/0-/GSoC:2011/Proposed projects.mediawiki
+++ b/0-/GSoC:2011/Proposed projects.mediawiki
@@ -26,7 +26,7 @@ mount point of a rockbox device and the name of a collection would merge that co
 
 {{SoCItem| title=Service Clients| description=The Service Clients concept has been around in the XMMS2 world for quite some time. There is even a [http://git.xmms.se/cgit.cgi/xmms2/xmms2-puzzles/log/?h=sc reference implementation available]. The project would be to bring this reference implementation into shape and integrate it with our generated IPC framework. The API might also need some clean up, analyze it and point out pros and cons in your proposal.| lang=C| level=Medium|mentor=N/A}} 
 
-{{SoCItem| title=Adaptive playlists| description=[http://imms.luminal.org/ IMMS] has brought smart song scheduling to several music players, including XMMS2's predecessor XMMS. It would be great to have this again. It need not be through IMMS. It requires thought on how to do this in a clean manner. (See [[Collections]], [[Collections_2.0 | Collections 2.0]], [[Smart_playlists | Smart Playlists]], Service Clients, ...). As Service Clients haven't been finished yet, the client could be designed to use Service Clients technology, but during the GSoC have something that's simple to replace at a later stage. | lang=Any| level=Medium| mentor=N/A}}
+{{SoCItem| title=Adaptive playlists| description=[http://imms.luminal.org/ IMMS] has brought smart song scheduling to several music players, including XMMS2's predecessor XMMS. It would be great to have this again. It need not be through IMMS. It requires thought on how to do this in a clean manner. (See [[Collections]], [[Collections_2.0 | Collections 2.0]], [[Smart_playlists | Smart Playlists]], Service Clients, ...). As Service Clients haven't been finished yet, the client could be designed to use Service Clients technology in the future, but during the GSoC have something that's simple to replace at a later stage. | lang=Any| level=Medium| mentor=N/A}}
 
 == Platform support ==
 
