--- a/0-/GSoC:2011/Proposed projects.mediawiki
+++ b/0-/GSoC:2011/Proposed projects.mediawiki
@@ -31,7 +31,7 @@ mount point of a rockbox device and the name of a collection would merge that co
 == Platform support ==
 
 {{SoCItem| title=Mac OSX integration and distribution
-|description=Mac OSX is a different kind of beast than most other unixes, this also means that it needs some extra integration. We are looking for a student that could help further the XMMS2 integration with MacOSX. Primarily it would be to modify waf to be able to build .app bundles with all dependencies in them so that XMMS2 could be distributed as a APP on a DMG. Optional goodies: xmmsclient framework to be used in XCode for developing Objective-C clients, integration with media buttons (play, next, etc), listening to signals when computer goes to sleep (to pause music), automatic import of the iTunes library and much much more. A good hand with [http://code.google.com/p/waf/ waf] is a merit.
+|description=Mac OSX is a different kind of beast than most other unixes, this also means that it needs some extra integration. We are looking for a student that could help further the XMMS2 integration with MacOSX. Primarily the product will be a build system that build all of XMMS2's dependencies so that it can be distributed as a APP on a DMG. The XMMS2 build system should also be updated to produce a framework for xmmsclient, xmmsclient-cocoa and xmmsclient-glib. Integration with media buttons (play, next, etc), listening to signals when computer goes to sleep (to pause music), automatic import of the iTunes library would be nice. It would also be cool if the XMMS2 dock app had support for updating the configuration, at least in a simple editable table view. A good hand with [http://code.google.com/p/waf/ waf] and Objective-C is a merit.
 |lang=Python/Objective-C/C
 |level=Medium to Hard
 |mentor=N/A}}
