--- a/0-/About.mediawiki
+++ b/0-/About.mediawiki
@@ -1,5 +1,5 @@
 __NOTOC__
-You might have heard of [[Wikipedia:XMMS|XMMS]] ([http://www.xmms.org xmms.org]), the hugely popular [[Wikipedia:Winamp|Winamp]] clone for Linux and UNIX-like operating systems. ''XMMS2'' is a project started (in late [[XMMS2:History/Ancient#2002|2002]]) by one of XMMS's original authors - Peter Alm - to produce a "kick-ass music player" (much like the world's 34734973992<sup>[[#Footnotes|1]]</sup> other music player projects). In short, XMMS2 is the next generation XMMS.
+You might have heard of [[Wikipedia:XMMS|XMMS]] ([http://legacy.xmms2.org/ legacy.xmms2.org]), the hugely popular [[Wikipedia:Winamp|Winamp]] clone for Linux and UNIX-like operating systems. ''XMMS2'' is a project started (in late [[XMMS2:History/Ancient#2002|2002]]) by one of XMMS's original authors - Peter Alm - to produce a "kick-ass music player" (much like the world's 34734973992<sup>[[#Footnotes|1]]</sup> other music player projects). In short, XMMS2 is the next generation XMMS.
 
 So, XMMS2 is definitely an audio player. But it is ''[[What_XMMS2_will_not_do| not]]'' a general multimedia player - it will not play videos. It has a modular framework and plugin architecture for audio processing, visualisation and output, but this framework has not been designed to support video. Also the [[Design of XMMS2|client-server design]] of XMMS2 (and the daemon being independent of any graphics output) practically prevents direct video output being implemented.
 
