--- a/0-/GSoC:2011/Student Application.mediawiki
+++ b/0-/GSoC:2011/Student Application.mediawiki
@@ -35,7 +35,7 @@ So you want to get on the XMMS2 love-boat? Try to answer as many of these questi
 * Would you mind talking with your mentor on telephone / internet phone?
 * Will you be available full summer, or do you still have lectures/exams/whatever when GSoC starts? Are you planning on some vacation (when you won't be coding on GSoC project) during the summer?
 == Detailed answer ==
-''This section is optional, but well developed answers are highly appreciated''
+''This section is optional, but well developed answers are highly appreciated.''
 * Write a small essay (750-1000 words or more) explaining why you want to participate in an XMMS2 GSoC project. You can use the above questions as guides, but feel free to throw in more information if you feel it is relevant.
 ** What is your particular interest in XMMS2? How do you consider the state of XMMS2, i.e. what do you see as its main strengths and shortcomings?
 ** What is your perception of 'Open Source'? Briefly explain what you think of the whole 'Open Source' concept, how you discovered Open Source, what you expect to gain/experience by participating in an Open Source project. (Either separate answer, or as part of above mini-essay)
