--- a/0-/GSoC:2011/Proposed projects/Smarter Playlists.mediawiki
+++ b/0-/GSoC:2011/Proposed projects/Smarter Playlists.mediawiki
@@ -1,4 +1,4 @@
-Back in 2005 SÃ©bastien Cevey, aka [[User:Theefer|theefer]] wrote his [http://bytes.inso.cc/wp/2005/07/11/better-music-player-manifesto/ Manifesto for a Better Music Player]. (Sadly this page is down as of 2010-03-21. However it is mirrored [[Manifesto_for_a_Better_Music_Player|here]].) Then in [[SoC:Collections|GSoC 2006]] he went on and wrote [[Collections_Concept|Collections]] into XMMS2. Simply put, users can store media library queries at the server. These saved searches can then be used to randomly add items to a playlist as needed. This is where Smart Playlists come in, since, as it turns out, randomly adding songs is a bit, well, ''too'' random.
+Back in 2005 Sébastien Cevey, aka [[User:Theefer|theefer]] wrote his [http://bytes.inso.cc/wp/2005/07/11/better-music-player-manifesto/ Manifesto for a Better Music Player]. (Sadly this page is down as of 2010-03-21. However it is mirrored [[Manifesto_for_a_Better_Music_Player|here]].) Then in [[SoC:Collections|GSoC 2006]] he went on and wrote [[Collections_Concept|Collections]] into XMMS2. Simply put, users can store media library queries at the server. These saved searches can then be used to randomly add items to a playlist as needed. This is where Smart Playlists come in, since, as it turns out, randomly adding songs is a bit, well, ''too'' random.
 
 == Issues ==
 Some of the issues with the current random playlists are:
